--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,7 +19,7 @@ jobs:
     - name: docker build
       run: |
         cd vote && docker build -t $REGISTRY/$IMAGE_NAME:vote-1.0.0 . && cd ..
-        cd result && docker build -t $REGISTRY/$IMAGE_NAME:result-1.0.0 . && cd
-        cd worker && docker build -t $REGISTRY/$IMAGE_NAME:worker-1.0.0 . && cd
+        cd result && docker build -t $REGISTRY/$IMAGE_NAME:result-1.0.0 . && cd ..
+        cd worker && docker build -t $REGISTRY/$IMAGE_NAME:worker-1.0.0 . && cd ..
     - name: docker images
       run: docker images | grep $REGISTRY/$IMAGE_NAME
