--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,10 +16,14 @@ jobs:
     - uses: actions/checkout@v3
     - name: check listar
       run: ls
-    - name: docker build
+    - name: docker build vote
       run: |
-        cd vote && docker build -t $REGISTRY/$IMAGE_NAME:vote-1.0.0 . && cd ..
-        cd result && docker build -t $REGISTRY/$IMAGE_NAME:result-1.0.0 . && cd ..
-        cd worker && docker build -t $REGISTRY/$IMAGE_NAME:worker-1.0.0 . && cd ..
+        cd vote && docker build -t $REGISTRY/$IMAGE_NAME:vote-1.0.0 .
+    - name: docker build result
+      run: |
+        cd result && docker build -t $REGISTRY/$IMAGE_NAME:result-1.0.0 .
+    - name: docker build worker
+      run: |
+        cd worker && docker build -t $REGISTRY/$IMAGE_NAME:worker-1.0.0 .
     - name: docker images
       run: docker images | grep $REGISTRY/$IMAGE_NAME
